--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <title>Our HTML5 Site</title>
     <link rel="stylesheet" href="css/stylesheet.css">
+    <!--[if lt IE 9]>
+    <script src="js/html5shiv.js"></script>
+    <![endif]-->
     <script src="js/global.js"></script>
   </head>
   <body>
