CSS Tutorials #1 - Introduction to CSS and Adding a CSS File to Your Html

--- a/index.html
+++ b/index.html
@@ -3,21 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>Our HTML5 Site</title>
-    <link rel="stylesheet" href="css/stylesheet.css">
+    <link rel="stylesheet" href="css/style.css">
     <!--[if lt IE 9]>
-    <script src="js/html5shiv.js"></script>
+      <script src="js/html5shiv.js"></script>
     <![endif]-->
-    <script src="js/global.js"></script>
   </head>
   <body>
-    <header>
-      <h1>Hello</h1>
-    </header>
-    <section>
-      <p> section </p>
-    </section>
-    <footer>
-      <p> this is the footer</p>
-    </footer>
+    <h1>Level Up Tuts</h1>
+    <p>Hello world! </p>
+
   </body>
 </html>
