--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <![endif]-->
   </head>
   <body>
-    <h1>Level Up Tuts</h1>
-    <p>Hello world! </p>
-
+    <div class="wrapper">
+      <h1>Level Up Tuts</h1>
+      <p>Hello world! This is HTML5 boilerplate.</p>
+      <p class="alert">YOO</p>
+    </div>
   </body>
 </html>
