--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="wrapper">
       <h1>Level Up Tuts</h1>
-      <p>Hello world! This is HTML5 boilerplate.</p>
+      <p class="first">Hello world! This is HTML5 boilerplate.</p>
       <p class="alert">YOO</p>
     </div>
   </body>
