CSS Tutorials #7 - Styling Lists to Create a Horizontal Navigaton

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
   <body>
     <div class="wrapper">
       <h1>Level Up Tuts</h1>
+      <ul class="nav">
+        <li class="first"><a href="#">First</a></li>
+        <li><a href="#">Second</a></li>
+        <li><a href="#">Third</a></li>
+        <li class="last"><a href="">Last</a></li>
+      </ul>
       <p class="first">Hello world! This is HTML5 boilerplate.</p>
       <p class="alert">YOO</p>
     </div>
