CSS Tutorials #12 - DRY Code and Grouping and Nesting Selectors

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="wrapper">
-      <h1>Level Up Tuts</h1>
+      <h1 class="warning">Level Up Tuts</h1>
       <ul class="nav">
         <li class="first"><a href="#">First</a></li>
         <li><a href="#">Second</a></li>
@@ -18,7 +18,7 @@
         <li class="last"><a href="">Last</a></li>
       </ul>
       <p class="first">Hello world! This is HTML5 boilerplate.</p>
-      <p class="alert">YOO</p>
+      <p class="warning">YOO YOO YOO YOO YOO YOO YOO YOO YOO YOO </p>
     </div>
   </body>
 </html>
