CSS Tutorials #14 - Controlling Display with the Display Property

--- a/index.html
+++ b/index.html
@@ -20,5 +20,8 @@
       <p class="first">Hello world! This is HTML5 boilerplate.</p>
       <p >YOO YOO YOO YOO YOO YOO YOO YOO YOO YOO </p>
      </div>
+    <div class="red">
+
+    </div>
   </body>
 </html>
