--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <![endif]-->
   </head>
   <body>
+    <div class="feedback">
+        Feedback
+    </div>
     <div class="wrapper">
       <h1 >Level Up Tuts</h1>
       <ul class="nav">
@@ -19,9 +22,22 @@
       </ul>
       <p class="first">Hello world! This is HTML5 boilerplate.</p>
       <p >YOO YOO YOO YOO YOO YOO YOO YOO YOO YOO </p>
-     </div>
-    <div class="red">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa cum cumque dolore ducimus excepturi id, libero,
+        nemo, omnis pariatur quae quo saepe. Aperiam debitis doloremque ducimus facere in, iste voluptatem.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa cum cumque dolore ducimus excepturi id, libero,
+        nemo, omnis pariatur quae quo saepe. Aperiam debitis doloremque ducimus facere in, iste voluptatem.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa cum cumque dolore ducimus excepturi id, libero,
+        nemo, omnis pariatur quae quo saepe. Aperiam debitis doloremque ducimus facere in, iste voluptatem.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa cum cumque dolore ducimus excepturi id, libero,
+        nemo, omnis pariatur quae quo saepe. Aperiam debitis doloremque ducimus facere in, iste voluptatem.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa cum cumque dolore ducimus excepturi id, libero,
+        nemo, omnis pariatur quae quo saepe. Aperiam debitis doloremque ducimus facere in, iste voluptatem.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa cum cumque dolore ducimus excepturi id, libero,
+        nemo, omnis pariatur quae quo saepe. Aperiam debitis doloremque ducimus facere in, iste voluptatem.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa cum cumque dolore ducimus excepturi id, libero,
+        nemo, omnis pariatur quae quo saepe. Aperiam debitis doloremque ducimus facere in, iste voluptatem.</p>
 
-    </div>
+     </div>
+
   </body>
 </html>
