CSS Tutorials #20 - Text Replacement

--- a/index.html
+++ b/index.html
@@ -9,34 +9,45 @@
     <![endif]-->
   </head>
   <body>
-    <div class="feedback">
-        Feedback
-    </div>
-    <div class="wrapper">
-      <h1 >Level Up Tuts</h1>
-      <ul class="nav">
-        <li class="first"><a href="#">First</a></li>
-        <li><a href="#">Second</a></li>
-        <li><a href="#">Third</a></li>
-        <li class="last"><a href="">Last</a></li>
-      </ul>
-      <p class="first">Hello world! This is HTML5 boilerplate.</p>
-      <p >YOO YOO YOO YOO YOO YOO YOO YOO YOO YOO </p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa cum cumque dolore ducimus excepturi id, libero,
-        nemo, omnis pariatur quae quo saepe. Aperiam debitis doloremque ducimus facere in, iste voluptatem.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa cum cumque dolore ducimus excepturi id, libero,
-        nemo, omnis pariatur quae quo saepe. Aperiam debitis doloremque ducimus facere in, iste voluptatem.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa cum cumque dolore ducimus excepturi id, libero,
-        nemo, omnis pariatur quae quo saepe. Aperiam debitis doloremque ducimus facere in, iste voluptatem.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa cum cumque dolore ducimus excepturi id, libero,
-        nemo, omnis pariatur quae quo saepe. Aperiam debitis doloremque ducimus facere in, iste voluptatem.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa cum cumque dolore ducimus excepturi id, libero,
-        nemo, omnis pariatur quae quo saepe. Aperiam debitis doloremque ducimus facere in, iste voluptatem.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa cum cumque dolore ducimus excepturi id, libero,
-        nemo, omnis pariatur quae quo saepe. Aperiam debitis doloremque ducimus facere in, iste voluptatem.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa cum cumque dolore ducimus excepturi id, libero,
-        nemo, omnis pariatur quae quo saepe. Aperiam debitis doloremque ducimus facere in, iste voluptatem.</p>
+    <header>
+      <h1 class="logo"><a href="index.html">LEVEL UP TUTS</a></h1>
 
+    </header>
+    <div class="wrapper clearfix">
+      <div class="left-col">
+        <ul class="side-nav">
+          <li><a href="">First</a></li>
+          <li><a href="">Second</a></li>
+          <li><a href="">Third</a></li>
+          <li><a href="">Last</a></li>
+        </ul>
+      </div>
+      <div class="main-col">
+        <ul class="nav">
+          <li class="first"><a href="#">First</a></li>
+          <li><a href="#">Second</a></li>
+          <li><a href="#">Third</a></li>
+          <li class="last"><a href="">Last</a></li>
+        </ul>
+        <p class="first">Hello world! This is HTML5 boilerplate.</p>
+        <p >YOO YOO YOO YOO YOO YOO YOO YOO YOO YOO </p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa cum cumque dolore ducimus excepturi id, libero,
+          nemo, omnis pariatur quae quo saepe. Aperiam debitis doloremque ducimus facere in, iste voluptatem.</p>
+        <img class="floating" src="img/logo.png">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa cum cumque dolore ducimus excepturi id, libero,
+          nemo, omnis pariatur quae quo saepe. Aperiam debitis doloremque ducimus facere in, iste voluptatem.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa cum cumque dolore ducimus excepturi id, libero,
+          nemo, omnis pariatur quae quo saepe. Aperiam debitis doloremque ducimus facere in, iste voluptatem.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa cum cumque dolore ducimus excepturi id, libero,
+          nemo, omnis pariatur quae quo saepe. Aperiam debitis doloremque ducimus facere in, iste voluptatem.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa cum cumque dolore ducimus excepturi id, libero,
+          nemo, omnis pariatur quae quo saepe. Aperiam debitis doloremque ducimus facere in, iste voluptatem.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa cum cumque dolore ducimus excepturi id, libero,
+          nemo, omnis pariatur quae quo saepe. Aperiam debitis doloremque ducimus facere in, iste voluptatem.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa cum cumque dolore ducimus excepturi id, libero,
+          nemo, omnis pariatur quae quo saepe. Aperiam debitis doloremque ducimus facere in, iste voluptatem.</p>
+
+      </div>
      </div>
 
   </body>
